Update globals.css with class overrides for provider icons

--- a/app/globals.css
+++ b/app/globals.css
@@ -55,6 +55,13 @@
 }
 
 /* ==== clerk class override ===== */
+.cl-providerIcon__github {
+  filter: invert(1);
+}
+
+.cl-providerIcon__apple {
+  filter: invert(1);
+}
 
 .cl-userButtonPopoverActionButtonIcon {
   color: white;
